--- a/ag_grid/src/app/app.component.html
+++ b/ag_grid/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet />
+AG Grid
+<div class="content ag-theme-quartz" style="width: 100%; height: 100%;">
+  <ag-grid-angular
+    style="width: 100%; height: 100%;"
+    [rowData]="rowData"
+    [columnDefs]="colDefs"
+    [defaultColDef]="defaultColDef"
+  ></ag-grid-angular>
+</div>
+<router-outlet></router-outlet>
