--- a/ag_grid/src/app/app.component.html
+++ b/ag_grid/src/app/app.component.html
@@ -5,6 +5,8 @@ AG Grid
     [rowData]="rowData"
     [columnDefs]="colDefs"
     [defaultColDef]="defaultColDef"
+    [pagination]="true"
   ></ag-grid-angular>
 </div>
 <router-outlet></router-outlet>
+
