Stock price simulation

--- a/ag_grid/src/app/app.component.html
+++ b/ag_grid/src/app/app.component.html
@@ -1,11 +1,11 @@
-AG Grid
+Stock Price List
 <div class="content ag-theme-quartz" style="width: 100%; height: 100%;">
   <ag-grid-angular
     style="width: 100%; height: 100%;"
     [rowData]="rowData"
     [columnDefs]="colDefs"
     [defaultColDef]="defaultColDef"
-    [pagination]="true"
+    [pagination]="false"
   ></ag-grid-angular>
 </div>
 <router-outlet></router-outlet>
