--- a/ag_grid/src/app/app.component.html
+++ b/ag_grid/src/app/app.component.html
@@ -1,4 +1,4 @@
-Stock Price List
+<span style="font-size: 1.5rem;">Simulated Stock Prices</span>
 <div class="content ag-theme-quartz" style="width: 100%; height: 100%;">
   <ag-grid-angular
     style="width: 100%; height: 100%;"
